addressed the raw DOM element issue, and added an overflow-y: scroll style to the container raw dom element to prevent editor-breaking overflow issues

--- a/src/style/cell-styles.css
+++ b/src/style/cell-styles.css
@@ -18,6 +18,10 @@ div.cell-container {
 but I don't see why we would have to do this immediately.
 */
 
+div#cells.editor div.raw-dom-element {
+  overflow-x: scroll
+}
+
 div#cells.presentation div.cell-container {
   margin: 0 auto; 
   outline: none;
